--- a/dev/index.html
+++ b/dev/index.html
@@ -13,9 +13,9 @@ Pkg.add(&quot;StructuralIdentifiability&quot;)</code></pre><h2 id="Citation"><a 
 }</code></pre><h2 id="Feature-Summary"><a class="docs-heading-anchor" href="#Feature-Summary">Feature Summary</a><a id="Feature-Summary-1"></a><a class="docs-heading-anchor-permalink" href="#Feature-Summary" title="Permalink"></a></h2><p><code>StructuralIdentifiability.jl</code> can assess local and global identifiability of ODE models. In addition to these straightforward identifiability queries on individual parameters, the package is able to distinguish between single- and multi-experiment identifiability.</p><h2 id="Feature-List"><a class="docs-heading-anchor" href="#Feature-List">Feature List</a><a id="Feature-List-1"></a><a class="docs-heading-anchor-permalink" href="#Feature-List" title="Permalink"></a></h2><ul><li>Local identifiability checks</li><li>Global identifiability checks</li><li>Assessment of identifiable functions of parameters</li></ul><h2 id="Contributing"><a class="docs-heading-anchor" href="#Contributing">Contributing</a><a id="Contributing-1"></a><a class="docs-heading-anchor-permalink" href="#Contributing" title="Permalink"></a></h2><ul><li>Please refer to the <a href="https://github.com/SciML/ColPrac/blob/master/README.md">SciML ColPrac: Contributor&#39;s Guide on Collaborative Practices for Community Packages</a> for guidance on PRs, issues, and other matters relating to contributing to StructuralIdentifiability.</li><li>There are a few community forums:<ul><li>The #diffeq-bridged channel in the <a href="https://julialang.org/slack/">Julia Slack</a></li><li><a href="https://gitter.im/JuliaDiffEq/Lobby">JuliaDiffEq</a> on Gitter</li><li>On the Julia Discourse forums</li><li>See also <a href="https://sciml.ai/community/">SciML Community page</a></li></ul></li></ul><h2 id="Reproducibility"><a class="docs-heading-anchor" href="#Reproducibility">Reproducibility</a><a id="Reproducibility-1"></a><a class="docs-heading-anchor-permalink" href="#Reproducibility" title="Permalink"></a></h2><details><summary>The documentation of this SciML package was built using these direct dependencies,</summary><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Status `~/work/StructuralIdentifiability.jl/StructuralIdentifiability.jl/docs/Project.toml`
   [6e4b80f9] BenchmarkTools v1.3.2
   [e30172f5] Documenter v0.27.23
-  [961ee093] ModelingToolkit v8.33.0
-  [220ca800] StructuralIdentifiability v0.4.2 `~/work/StructuralIdentifiability.jl/StructuralIdentifiability.jl`</code></pre></details><details><summary>and using this machine and Julia version.</summary><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Julia Version 1.8.2
-Commit 36034abf260 (2022-09-29 15:21 UTC)
+  [961ee093] ModelingToolkit v8.33.1
+  [220ca800] StructuralIdentifiability v0.4.2 `~/work/StructuralIdentifiability.jl/StructuralIdentifiability.jl`</code></pre></details><details><summary>and using this machine and Julia version.</summary><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Julia Version 1.8.3
+Commit 0434deb161e (2022-11-14 20:14 UTC)
 Platform Info:
   OS: Linux (x86_64-linux-gnu)
   CPU: 2 × Intel(R) Xeon(R) Platinum 8370C CPU @ 2.80GHz
@@ -24,33 +24,33 @@ Platform Info:
   LLVM: libLLVM-13.0.1 (ORCJIT, icelake-server)
   Threads: 1 on 2 virtual cores</code></pre></details><details><summary>A more complete overview of all dependencies and their versions is also provided.</summary><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Status `~/work/StructuralIdentifiability.jl/StructuralIdentifiability.jl/docs/Manifest.toml`
   [a4c015fc] ANSIColoredPrinters v0.0.1
-  [c3fe647b] AbstractAlgebra v0.27.6
+  [c3fe647b] AbstractAlgebra v0.27.7
   [1520ce14] AbstractTrees v0.4.3
   [79e6a3ab] Adapt v3.4.0
   [dce04be8] ArgCheck v2.3.0
   [ec485272] ArnoldiMethod v0.2.0
-  [4fba245c] ArrayInterface v6.0.23
+⌃ [4fba245c] ArrayInterface v6.0.23
   [30b0a656] ArrayInterfaceCore v0.1.26
-  [015c0d05] ArrayInterfaceOffsetArrays v0.1.6
-  [b0d46f97] ArrayInterfaceStaticArrays v0.1.4
+  [015c0d05] ArrayInterfaceOffsetArrays v0.1.7
+⌃ [b0d46f97] ArrayInterfaceStaticArrays v0.1.4
   [dd5226c6] ArrayInterfaceStaticArraysCore v0.1.3
   [15f4f7f2] AutoHashEquals v0.2.0
   [198e06fe] BangBang v0.3.37
   [9718e550] Baselet v0.1.1
   [6e4b80f9] BenchmarkTools v1.3.2
   [e2ed5e7c] Bijections v0.1.4
-  [62783981] BitTwiddlingConvenienceFunctions v0.1.4
-  [2a0fbf3d] CPUSummary v0.1.28
+  [62783981] BitTwiddlingConvenienceFunctions v0.1.5
+  [2a0fbf3d] CPUSummary v0.1.30
   [00ebfdb7] CSTParser v3.3.6
   [49dc2e85] Calculus v0.5.1
   [d360d2e6] ChainRulesCore v1.15.6
   [9e997f8a] ChangesOfVariables v0.1.4
   [fb6a15b2] CloseOpenIntervals v0.1.10
   [861a8166] Combinatorics v1.0.2
-  [a80b9123] CommonMark v0.8.6
+  [a80b9123] CommonMark v0.8.7
   [38540f10] CommonSolve v0.2.3
   [bbf7d656] CommonSubexpressions v0.3.0
-  [34da2185] Compat v4.3.0
+  [34da2185] Compat v4.4.0
   [b152e2b5] CompositeTypes v0.1.3
   [a33af91c] CompositionsBase v0.1.1
   [187b0558] ConstructionBase v1.4.1
@@ -65,9 +65,9 @@ Platform Info:
   [2b5f629d] DiffEqBase v6.106.0
   [459566f4] DiffEqCallbacks v2.24.3
   [163ba53b] DiffResults v1.1.0
-  [b552c78f] DiffRules v1.12.1
+  [b552c78f] DiffRules v1.12.2
   [b4f34e82] Distances v0.10.7
-  [31c24e10] Distributions v0.25.77
+  [31c24e10] Distributions v0.25.78
   [ffbed154] DocStringExtensions v0.9.2
   [e30172f5] Documenter v0.27.23
   [5b8099bc] DomainSets v0.5.14
@@ -87,8 +87,8 @@ Platform Info:
   [86223c79] Graphs v1.7.4
   [0b43b601] Groebner v0.2.11
   [d5909c97] GroupsCore v0.4.0
-  [3e1990a7] Hecke v0.15.8
-  [3e5b6fbb] HostCPUFeatures v0.1.9
+  [3e1990a7] Hecke v0.16.1
+  [3e5b6fbb] HostCPUFeatures v0.1.13
   [34004b35] HypergeometricFunctions v0.3.11
   [b5f81e59] IOCapture v0.2.2
   [615f187c] IfElse v0.1.1
@@ -112,29 +112,29 @@ Platform Info:
   [10f19ff3] LayoutPointers v0.1.11
   [d3d80556] LineSearches v7.2.0
   [2ab3a3ac] LogExpFunctions v0.3.18
-  [bdcacae8] LoopVectorization v0.12.138
+  [bdcacae8] LoopVectorization v0.12.139
   [1914dd2f] MacroTools v0.5.10
   [d125e4d3] ManualMemory v0.1.8
   [e9d8d322] Metatheory v1.3.5
   [128add7d] MicroCollections v0.1.3
   [e1d29d7a] Missings v1.0.2
-  [961ee093] ModelingToolkit v8.33.0
+  [961ee093] ModelingToolkit v8.33.1
   [46d2c3a1] MuladdMacro v0.2.4
   [102ac46a] MultivariatePolynomials v0.4.6
   [d8a4904e] MutableArithmetics v1.0.5
   [d41bc354] NLSolversBase v7.8.2
   [2774e3e8] NLsolve v4.5.1
   [77ba4419] NaNMath v1.0.1
-  [2edaba10] Nemo v0.32.4
+  [2edaba10] Nemo v0.32.5
   [8913a72c] NonlinearSolve v0.3.22
   [6fe1bfb0] OffsetArrays v1.12.8
   [bac558e1] OrderedCollections v1.4.1
   [90014a1f] PDMats v0.11.16
   [d96e819e] Parameters v0.12.3
-  [69de0a69] Parsers v2.5.0
+  [69de0a69] Parsers v2.5.1
   [e409e4f3] PoissonRandom v0.4.3
   [f517fe37] Polyester v0.6.16
-  [1d0040c9] PolyesterWeave v0.1.10
+  [1d0040c9] PolyesterWeave v0.1.11
   [d236fae5] PreallocationTools v0.4.4
   [21216c6a] Preferences v1.3.0
   [27ebfcd6] Primes v0.5.3
@@ -152,20 +152,20 @@ Platform Info:
   [3cdde19b] SIMDDualNumbers v0.1.1
   [94e857df] SIMDTypes v0.1.0
   [476501e8] SLEEFPirates v0.6.36
-  [0bca4576] SciMLBase v1.71.0
+  [0bca4576] SciMLBase v1.72.0
   [efcf1570] Setfield v1.1.1
   [699a6c99] SimpleTraits v0.9.4
   [66db9d55] SnoopPrecompile v1.0.1
-  [a2af1166] SortingAlgorithms v1.0.1
+  [a2af1166] SortingAlgorithms v1.1.0
   [276daf66] SpecialFunctions v2.1.7
   [171d559e] SplittablesBase v0.1.15
-  [aedffcd0] Static v0.7.8
-  [90137ffa] StaticArrays v1.5.9
+⌅ [aedffcd0] Static v0.7.8
+  [90137ffa] StaticArrays v1.5.10
   [1e83bf80] StaticArraysCore v1.4.0
   [82ae8749] StatsAPI v1.5.0
   [2913bbd2] StatsBase v0.33.21
   [4c63d2b9] StatsFuns v1.0.1
-  [7792a7ef] StrideArraysCore v0.3.15
+  [7792a7ef] StrideArraysCore v0.3.16
   [220ca800] StructuralIdentifiability v0.4.2 `~/work/StructuralIdentifiability.jl/StructuralIdentifiability.jl`
   [d1185830] SymbolicUtils v0.19.11
   [0c5d862f] Symbolics v4.13.0
@@ -183,8 +183,8 @@ Platform Info:
   [410a4b4d] Tricks v0.1.6
   [5c2747f8] URIs v1.4.0
   [3a884ed6] UnPack v1.0.2
-  [1986cc42] Unitful v1.12.0
-  [3d5dd08c] VectorizationBase v0.21.54
+  [1986cc42] Unitful v1.12.1
+  [3d5dd08c] VectorizationBase v0.21.55
   [700de1a5] ZygoteRules v0.2.2
   [e21ec000] Antic_jll v0.201.500+0
   [d9960996] Arb_jll v200.2300.0+0
@@ -241,6 +241,6 @@ Platform Info:
   [8e850b90] libblastrampoline_jll v5.1.1+0
   [8e850ede] nghttp2_jll v1.48.0+0
   [3f19e933] p7zip_jll v17.4.0+0
-Info Packages marked with ⌅ have new versions available but compatibility constraints restrict them from upgrading. To see why use `status --outdated -m`</code></pre></details>You can also download the 
+Info Packages marked with ⌃ and ⌅ have new versions available, but those with ⌅ are restricted by compatibility constraints from upgrading. To see why use `status --outdated -m`</code></pre></details>You can also download the 
 <a href="https://github.com/SciML/StructuralIdentifiability.jl/tree/gh-pages/v0.4.2/assets/Manifest.toml">manifest</a> file and the
-<a href="https://github.com/SciML/StructuralIdentifiability.jl/tree/gh-pages/v0.4.2/assets/Project.toml">project</a> file.</article><nav class="docs-footer"><a class="docs-footer-nextpage" href="tutorials/local_identifiability/">Local Identifiability of Differential Models »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.23 on <span class="colophon-date" title="Saturday 12 November 2022 20:14">Saturday 12 November 2022</span>. Using Julia version 1.8.2.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+<a href="https://github.com/SciML/StructuralIdentifiability.jl/tree/gh-pages/v0.4.2/assets/Project.toml">project</a> file.</article><nav class="docs-footer"><a class="docs-footer-nextpage" href="tutorials/local_identifiability/">Local Identifiability of Differential Models »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.23 on <span class="colophon-date" title="Saturday 19 November 2022 23:32">Saturday 19 November 2022</span>. Using Julia version 1.8.3.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
