--- a/dev/index.html
+++ b/dev/index.html
@@ -13,7 +13,7 @@ Pkg.add(&quot;StructuralIdentifiability&quot;)</code></pre><h2 id="Citation"><a 
 }</code></pre><h2 id="Feature-Summary"><a class="docs-heading-anchor" href="#Feature-Summary">Feature Summary</a><a id="Feature-Summary-1"></a><a class="docs-heading-anchor-permalink" href="#Feature-Summary" title="Permalink"></a></h2><p><code>StructuralIdentifiability.jl</code> can assess local and global identifiability of ODE models. In addition to these straightforward identifiability queries on individual parameters, the package is able to distinguish between single- and multi-experiment identifiability.</p><h2 id="Feature-List"><a class="docs-heading-anchor" href="#Feature-List">Feature List</a><a id="Feature-List-1"></a><a class="docs-heading-anchor-permalink" href="#Feature-List" title="Permalink"></a></h2><ul><li>Local identifiability checks</li><li>Global identifiability checks</li><li>Assessment of identifiable functions of parameters</li></ul><h2 id="Contributing"><a class="docs-heading-anchor" href="#Contributing">Contributing</a><a id="Contributing-1"></a><a class="docs-heading-anchor-permalink" href="#Contributing" title="Permalink"></a></h2><ul><li>Please refer to the <a href="https://github.com/SciML/ColPrac/blob/master/README.md">SciML ColPrac: Contributor&#39;s Guide on Collaborative Practices for Community Packages</a> for guidance on PRs, issues, and other matters relating to contributing to StructuralIdentifiability.</li><li>There are a few community forums:<ul><li>The #diffeq-bridged channel in the <a href="https://julialang.org/slack/">Julia Slack</a></li><li><a href="https://gitter.im/JuliaDiffEq/Lobby">JuliaDiffEq</a> on Gitter</li><li>On the Julia Discourse forums</li><li>See also <a href="https://sciml.ai/community/">SciML Community page</a></li></ul></li></ul><h2 id="Reproducibility"><a class="docs-heading-anchor" href="#Reproducibility">Reproducibility</a><a id="Reproducibility-1"></a><a class="docs-heading-anchor-permalink" href="#Reproducibility" title="Permalink"></a></h2><details><summary>The documentation of this SciML package was built using these direct dependencies,</summary><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Status `~/work/StructuralIdentifiability.jl/StructuralIdentifiability.jl/docs/Project.toml`
   [6e4b80f9] BenchmarkTools v1.3.2
   [e30172f5] Documenter v0.27.23
-  [961ee093] ModelingToolkit v8.33.1
+  [961ee093] ModelingToolkit v8.35.1
   [220ca800] StructuralIdentifiability v0.4.2 `~/work/StructuralIdentifiability.jl/StructuralIdentifiability.jl`</code></pre></details><details><summary>and using this machine and Julia version.</summary><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Julia Version 1.8.3
 Commit 0434deb161e (2022-11-14 20:14 UTC)
 Platform Info:
@@ -29,10 +29,10 @@ Platform Info:
   [79e6a3ab] Adapt v3.4.0
   [dce04be8] ArgCheck v2.3.0
   [ec485272] ArnoldiMethod v0.2.0
-⌃ [4fba245c] ArrayInterface v6.0.23
+  [4fba245c] ArrayInterface v6.0.24
   [30b0a656] ArrayInterfaceCore v0.1.26
   [015c0d05] ArrayInterfaceOffsetArrays v0.1.7
-⌃ [b0d46f97] ArrayInterfaceStaticArrays v0.1.4
+  [b0d46f97] ArrayInterfaceStaticArrays v0.1.5
   [dd5226c6] ArrayInterfaceStaticArraysCore v0.1.3
   [15f4f7f2] AutoHashEquals v0.2.0
   [198e06fe] BangBang v0.3.37
@@ -45,7 +45,7 @@ Platform Info:
   [49dc2e85] Calculus v0.5.1
   [d360d2e6] ChainRulesCore v1.15.6
   [9e997f8a] ChangesOfVariables v0.1.4
-  [fb6a15b2] CloseOpenIntervals v0.1.10
+  [fb6a15b2] CloseOpenIntervals v0.1.11
   [861a8166] Combinatorics v1.0.2
   [a80b9123] CommonMark v0.8.7
   [38540f10] CommonSolve v0.2.3
@@ -62,12 +62,12 @@ Platform Info:
   [ab62b9b5] DeepDiffs v1.2.0
   [244e2a9f] DefineSingletons v0.1.2
   [b429d917] DensityInterface v0.4.0
-  [2b5f629d] DiffEqBase v6.106.0
+  [2b5f629d] DiffEqBase v6.108.0
   [459566f4] DiffEqCallbacks v2.24.3
   [163ba53b] DiffResults v1.1.0
   [b552c78f] DiffRules v1.12.2
   [b4f34e82] Distances v0.10.7
-  [31c24e10] Distributions v0.25.78
+  [31c24e10] Distributions v0.25.79
   [ffbed154] DocStringExtensions v0.9.2
   [e30172f5] Documenter v0.27.23
   [5b8099bc] DomainSets v0.5.14
@@ -75,9 +75,9 @@ Platform Info:
   [7c1d4256] DynamicPolynomials v0.4.5
   [4e289a0a] EnumX v1.0.3
   [e2ba6199] ExprTools v0.1.8
-  [7034ab61] FastBroadcast v0.2.1
+  [7034ab61] FastBroadcast v0.2.3
   [1a297f60] FillArrays v0.13.5
-  [6a86dc24] FiniteDiff v2.16.0
+  [6a86dc24] FiniteDiff v2.17.0
   [59287772] Formatting v0.4.2
   [f6369f11] ForwardDiff v0.10.33
   [069b7b12] FunctionWrappers v1.1.3
@@ -87,8 +87,7 @@ Platform Info:
   [86223c79] Graphs v1.7.4
   [0b43b601] Groebner v0.2.11
   [d5909c97] GroupsCore v0.4.0
-  [3e1990a7] Hecke v0.16.1
-  [3e5b6fbb] HostCPUFeatures v0.1.13
+  [3e1990a7] Hecke v0.16.4
   [34004b35] HypergeometricFunctions v0.3.11
   [b5f81e59] IOCapture v0.2.2
   [615f187c] IfElse v0.1.1
@@ -99,41 +98,38 @@ Platform Info:
   [3587e190] InverseFunctions v0.1.8
   [92d709cd] IrrationalConstants v0.1.1
   [c8e1da08] IterTools v1.4.0
-  [42fd0dbc] IterativeSolvers v0.9.2
   [82899510] IteratorInterfaceExtensions v1.0.0
   [692b3bcd] JLLWrappers v1.4.1
   [682c06a0] JSON v0.21.3
   [98e50ef6] JuliaFormatter v1.0.15
-  [ccbc3e58] JumpProcesses v9.2.2
+  [ccbc3e58] JumpProcesses v9.2.3
   [b964fa9f] LaTeXStrings v1.3.0
   [2ee39098] LabelledArrays v1.12.5
   [984bce1d] LambertW v0.4.5
   [23fbe1c1] Latexify v0.15.17
-  [10f19ff3] LayoutPointers v0.1.11
+  [10f19ff3] LayoutPointers v0.1.12
   [d3d80556] LineSearches v7.2.0
-  [2ab3a3ac] LogExpFunctions v0.3.18
-  [bdcacae8] LoopVectorization v0.12.139
+  [2ab3a3ac] LogExpFunctions v0.3.19
   [1914dd2f] MacroTools v0.5.10
   [d125e4d3] ManualMemory v0.1.8
   [e9d8d322] Metatheory v1.3.5
   [128add7d] MicroCollections v0.1.3
   [e1d29d7a] Missings v1.0.2
-  [961ee093] ModelingToolkit v8.33.1
+  [961ee093] ModelingToolkit v8.35.1
   [46d2c3a1] MuladdMacro v0.2.4
   [102ac46a] MultivariatePolynomials v0.4.6
-  [d8a4904e] MutableArithmetics v1.0.5
-  [d41bc354] NLSolversBase v7.8.2
+  [d8a4904e] MutableArithmetics v1.1.0
+  [d41bc354] NLSolversBase v7.8.3
   [2774e3e8] NLsolve v4.5.1
   [77ba4419] NaNMath v1.0.1
   [2edaba10] Nemo v0.32.5
-  [8913a72c] NonlinearSolve v0.3.22
   [6fe1bfb0] OffsetArrays v1.12.8
   [bac558e1] OrderedCollections v1.4.1
   [90014a1f] PDMats v0.11.16
   [d96e819e] Parameters v0.12.3
   [69de0a69] Parsers v2.5.1
   [e409e4f3] PoissonRandom v0.4.3
-  [f517fe37] Polyester v0.6.16
+  [f517fe37] Polyester v0.6.18
   [1d0040c9] PolyesterWeave v0.1.11
   [d236fae5] PreallocationTools v0.4.4
   [21216c6a] Preferences v1.3.0
@@ -142,30 +138,28 @@ Platform Info:
   [fb686558] RandomExtensions v0.4.3
   [e6cf234a] RandomNumbers v1.5.3
   [3cdcf5f2] RecipesBase v1.3.1
-  [731186ca] RecursiveArrayTools v2.32.1
-  [f2c3362d] RecursiveFactorization v0.2.12
+  [731186ca] RecursiveArrayTools v2.32.2
   [189a3867] Reexport v1.2.2
   [42d2dcc6] Referenceables v0.1.2
   [ae029012] Requires v1.3.0
   [79098fc4] Rmath v0.7.0
   [7e49a35a] RuntimeGeneratedFunctions v0.5.5
-  [3cdde19b] SIMDDualNumbers v0.1.1
   [94e857df] SIMDTypes v0.1.0
-  [476501e8] SLEEFPirates v0.6.36
-  [0bca4576] SciMLBase v1.72.0
+  [0bca4576] SciMLBase v1.74.0
   [efcf1570] Setfield v1.1.1
+  [727e6d20] SimpleNonlinearSolve v0.1.2
   [699a6c99] SimpleTraits v0.9.4
   [66db9d55] SnoopPrecompile v1.0.1
   [a2af1166] SortingAlgorithms v1.1.0
   [276daf66] SpecialFunctions v2.1.7
   [171d559e] SplittablesBase v0.1.15
-⌅ [aedffcd0] Static v0.7.8
+  [aedffcd0] Static v0.8.2
   [90137ffa] StaticArrays v1.5.10
   [1e83bf80] StaticArraysCore v1.4.0
   [82ae8749] StatsAPI v1.5.0
   [2913bbd2] StatsBase v0.33.21
   [4c63d2b9] StatsFuns v1.0.1
-  [7792a7ef] StrideArraysCore v0.3.16
+  [7792a7ef] StrideArraysCore v0.4.0
   [220ca800] StructuralIdentifiability v0.4.2 `~/work/StructuralIdentifiability.jl/StructuralIdentifiability.jl`
   [d1185830] SymbolicUtils v0.19.11
   [0c5d862f] Symbolics v4.13.0
@@ -179,12 +173,10 @@ Platform Info:
   [0796e94c] Tokenize v0.5.24
   [28d57a85] Transducers v0.4.74
   [a2a6695c] TreeViews v0.3.0
-  [d5829a12] TriangularSolve v0.1.14
   [410a4b4d] Tricks v0.1.6
-  [5c2747f8] URIs v1.4.0
+  [5c2747f8] URIs v1.4.1
   [3a884ed6] UnPack v1.0.2
   [1986cc42] Unitful v1.12.1
-  [3d5dd08c] VectorizationBase v0.21.55
   [700de1a5] ZygoteRules v0.2.2
   [e21ec000] Antic_jll v0.201.500+0
   [d9960996] Arb_jll v200.2300.0+0
@@ -241,6 +233,6 @@ Platform Info:
   [8e850b90] libblastrampoline_jll v5.1.1+0
   [8e850ede] nghttp2_jll v1.48.0+0
   [3f19e933] p7zip_jll v17.4.0+0
-Info Packages marked with ⌃ and ⌅ have new versions available, but those with ⌅ are restricted by compatibility constraints from upgrading. To see why use `status --outdated -m`</code></pre></details>You can also download the 
+Info Packages marked with ⌅ have new versions available but compatibility constraints restrict them from upgrading. To see why use `status --outdated -m`</code></pre></details>You can also download the 
 <a href="https://github.com/SciML/StructuralIdentifiability.jl/tree/gh-pages/v0.4.2/assets/Manifest.toml">manifest</a> file and the
-<a href="https://github.com/SciML/StructuralIdentifiability.jl/tree/gh-pages/v0.4.2/assets/Project.toml">project</a> file.</article><nav class="docs-footer"><a class="docs-footer-nextpage" href="tutorials/local_identifiability/">Local Identifiability of Differential Models »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.23 on <span class="colophon-date" title="Saturday 19 November 2022 23:32">Saturday 19 November 2022</span>. Using Julia version 1.8.3.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+<a href="https://github.com/SciML/StructuralIdentifiability.jl/tree/gh-pages/v0.4.2/assets/Project.toml">project</a> file.</article><nav class="docs-footer"><a class="docs-footer-nextpage" href="tutorials/local_identifiability/">Local Identifiability of Differential Models »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.23 on <span class="colophon-date" title="Friday 25 November 2022 22:57">Friday 25 November 2022</span>. Using Julia version 1.8.3.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
